--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  background-color: rgb(229, 250, 195);
+  
+  min-height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header {
+  background-color: rgb(7, 248, 7);
+  background-image: url('./image/banner.jpg');
+     
+  color: white;
+  padding: 5rem 0;
+
+  background-size: 50%;
+
+  opacity: 0.6;
+}
+h1 {
+  color: white;
+  font-weight: 900;
+  text-align: center;
+  font-size: 3rem;
+}
+
+.title {
+  color:white;
+  text-align: center;
+  font-size: 5rem;
+
+}
+
+#cat {
+  text-transform: capitalize;
+}
+#cat2 {
+  text-transform: capitalize;
+  background-color: rgb(151, 235, 207);
+}
+#cat3 {
+  text-transform: capitalize;
+  background-color: rgb(238, 248, 142);
+}
+#img {
+  width: 40px;
+  height: 40px;
+}
+
+#img2 {
+  
+  margin-left: 3rem;
+  width: 45px;
+  height: 45px;
 }
